--- a/challenges/notebooks/notebook_challenge_001_level1.ipynb
+++ b/challenges/notebooks/notebook_challenge_001_level1.ipynb
@@ -27,10 +27,10 @@
       "id": "b2be889b",
       "metadata": {
         "id": "b2be889b",
-        "outputId": "59ededad-ded8-46e2-ec3c-f530c7e8e381",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "87e1d49c-3929-4d11-bd9d-50c0abb55e84"
       },
       "outputs": [
         {
@@ -57,8 +57,8 @@
         "id": "7b62dd5e"
       },
       "source": [
-        "Nesse primeiro desafio super fácil, eu preciso apenas dos registros do campo Email da tabela Customers onde o domínio seja da `apple`,\n",
-        "tu vai criar uma query que traga esse resultado e uma breve explicação da implementação do código e descrever a query abaixo:\n",
+        "Neste primeiro desafio super fácil, precisamos apenas dos registros do campo `Email` da tabela Customers onde o domínio seja da `apple`.\n",
+        "Crie uma query que retorne esse resultado e escreva uma breve explicação do código implementado:\n",
         "\n",
         "\n",
         "Resultado esperado:  \n",
@@ -73,26 +73,26 @@
         "ladislav_kovacs@apple.hu| \n",
         "hughoreilly@apple.ie| \n",
         "\n",
-        "Na celula onde tem `%%sql` tu vai escrever a query abaixo dela, exemplo:  \n",
+        "Na célula onde se encontra o `%%sql`, escreva sua query, sem deletar o comando. Exemplo:  \n",
         "```python\n",
         "%%sql\n",
         "select * from Customer\n",
         "```\n",
         "\n",
-        "Para resolução tu podes usar a documentação do sqlite:https://www.sqlite.org/docs.html"
+        "Para resolução utilize a documentação do sqlite:https://www.sqlite.org/docs.html"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "id": "78b7cbdc",
       "metadata": {
         "id": "78b7cbdc",
-        "outputId": "6e8da2aa-1a3e-4966-da0d-6317e3c48dce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "ac8e03a6-1960-4269-b1f1-8f9e03e5cf82"
       },
       "outputs": [
         {
@@ -106,7 +106,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         }
       ],
       "source": [
@@ -122,22 +122,30 @@
       },
       "source": [
         "explicação da implementação do código\n",
-        "....\n",
-        "\n",
-        "Foi usado o comando 'SELECT *' para listar todas as colunas da tabela Customer."
+        "...."
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Foi usado o comando 'SELECT *' para listar todas as colunas da tabela Customer."
+      ],
+      "metadata": {
+        "id": "9vcWmWpxVlHs"
+      },
+      "id": "9vcWmWpxVlHs"
+    },
+    {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 3,
       "id": "4aba4071",
       "metadata": {
         "id": "4aba4071",
-        "outputId": "5e2fe063-c430-4f71-e104-c4c180dfd737",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "bf57b4b9-b641-4f39-9346-46a66f9c5b46"
       },
       "outputs": [
         {
@@ -1122,7 +1130,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 3
         }
       ],
       "source": [
@@ -1133,12 +1141,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "O objetivo é listar os e-mails pertencentes ao domínio da 'Apple'. Para isso, foi listado apenas a coluna 'Email'."
+        "O objetivo do desafio é listar os e-mails pertencentes ao domínio da 'Apple'. Para isso, foi listado apenas a coluna 'Email'."
       ],
       "metadata": {
-        "id": "0H0Ai8jF4VjC"
+        "id": "aBhIv6iPVx3J"
       },
-      "id": "0H0Ai8jF4VjC"
+      "id": "aBhIv6iPVx3J"
     },
     {
       "cell_type": "code",
@@ -1147,15 +1155,15 @@
         "SELECT Email FROM Customer"
       ],
       "metadata": {
-        "id": "XLE-76cB49r3",
-        "outputId": "47ca6758-76bf-4d5f-bb90-22df565ec609",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "szZRZ6XRV75Z",
+        "outputId": "bec1508a-5d2f-4087-ca42-d9d505c5fb89"
       },
-      "id": "XLE-76cB49r3",
-      "execution_count": 23,
+      "id": "szZRZ6XRV75Z",
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -1419,38 +1427,38 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 4
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Dentre os e-mails listados, foi aplicado um filtro para listar apenas os e-mails do domínio da Apple. Note que esses e-mails tem um padrão na sua construção, por exemplo: username@apple.country. Onde 'username' é o nome que o usuário definir, '@appel' é o identificador do provedor de email do domínio da Appel e o final '.country' é o identificador do país (.fr para França, .it para Itália e assim por diante). Dito isto, o filto que será aplicado deve conter carateres que são comuns a todos os e-mails do domínio da Apple, independentemente do nome de usuário e do identificador do país. Assim, a string que será procurada é:\n",
+        "Dentre os e-mails listados, foi aplicado um filtro para listar apenas os e-mails do domínio da Apple. Note que esses e-mails tem um padrão na sua construção, por exemplo: username@apple.country. Onde 'username' é o nome que o usuário definir, '@appel' é o identificador do provedor de email do domínio da Appel e o final '.country' é o identificador do país (.fr para França, .it para Itália e assim por diante). Dito isto, o filtro que será aplicado deve conter carateres que são comuns a todos os e-mails do domínio da Apple, independentemente do nome de usuário e do identificador do país. Assim, a string que será procurada é:\n",
         "\n",
-        "'@apple.' -> incluindo o ponto no final. "
+        "'@apple.' -> incluindo o ponto no final."
       ],
       "metadata": {
-        "id": "IUyn6dO35R4a"
+        "id": "BuyQoZIOWI1N"
       },
-      "id": "IUyn6dO35R4a"
+      "id": "BuyQoZIOWI1N"
     },
     {
       "cell_type": "code",
       "source": [
         "%%sql\n",
-        "SELECT Email from Customer WHERE Email like \"%@apple.%\""
+        "SELECT Email FROM Customer WHERE Email LIKE \"%@apple.%\""
       ],
       "metadata": {
-        "id": "rIRM6S0a7M_K",
-        "outputId": "6f65eca9-1f65-4af5-8bb9-cf8dd8f9e01a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 225
-        }
+        },
+        "id": "-gSRggTZWXJ-",
+        "outputId": "b34cfa3c-b51b-4cf9-e7ee-f793b7f1f39c"
       },
-      "id": "rIRM6S0a7M_K",
-      "execution_count": 38,
+      "id": "-gSRggTZWXJ-",
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -1506,7 +1514,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 5
         }
       ]
     },
@@ -1516,14 +1524,14 @@
         "Observa-se que foram listados 7 endereços de e-mails pertencentes ao domínio da Apple."
       ],
       "metadata": {
-        "id": "AMnlSqSJ9zTB"
+        "id": "FTKuLTKeWs08"
       },
-      "id": "AMnlSqSJ9zTB"
+      "id": "FTKuLTKeWs08"
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3 (ipykernel)",
       "language": "python",
       "name": "python3"
     },
@@ -1537,122 +1545,14 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.4"
+      "version": "3.7.9"
     },
     "colab": {
-      "name": "notebook_challenge_001_level1.ipynb",
-      "provenance": []
+      "name": "Cópia de notebook_challenge_001_level1.ipynb",
+      "provenance": [],
+      "collapsed_sections": []
     }
   },
-<<<<<<< HEAD
   "nbformat": 4,
   "nbformat_minor": 5
 }
-=======
-  {
-   "cell_type": "markdown",
-   "id": "4ffaa676",
-   "metadata": {},
-   "source": [
-    "Execute a célula abaixo apenas uma vez."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2be889b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "\n",
-    "rm -rf /tmp/github; mkdir -p /tmp/github; cd /tmp/github\n",
-    "git clone https://github.com/romeritomorais/30-day-challenges-with-sql.git\n",
-    "sh /tmp/github/30-day-challenges-with-sql/challenges/utils/install-miniconda.sh > /dev/null 2>&1\n",
-    "sh /tmp/github/30-day-challenges-with-sql/challenges/utils/update-miniconda.sh > /dev/null 2>&1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7b62dd5e",
-   "metadata": {},
-   "source": [
-    "Neste primeiro desafio super fácil, precisamos apenas dos registros do campo `Email` da tabela Customers onde o domínio seja da `apple`.\n",
-    "Crie uma query que retorne esse resultado e escreva uma breve explicação do código implementado:\n",
-    "\n",
-    "\n",
-    "Resultado esperado:  \n",
-    "\n",
-    "Email |\n",
-    "-|\n",
-    "astrid.gruber@apple.at| \n",
-    "daan_peeters@apple.be| \n",
-    "tgoyer@apple.com| \n",
-    "isabelle_mercier@apple.fr| \n",
-    "terhi.hamalainen@apple.fi| \n",
-    "ladislav_kovacs@apple.hu| \n",
-    "hughoreilly@apple.ie| \n",
-    "\n",
-    "Na célula onde se encontra o `%%sql`, escreva sua query, sem deletar o comando. Exemplo:  \n",
-    "```python\n",
-    "%%sql\n",
-    "select * from Customer\n",
-    "```\n",
-    "\n",
-    "Para resolução utilize a documentação do sqlite:https://www.sqlite.org/docs.html"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78b7cbdc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext sql\n",
-    "%sql sqlite://///tmp/github/30-day-challenges-with-sql/challenges/utils/db/database.db"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "be967233",
-   "metadata": {},
-   "source": [
-    "explicação da implementação do código\n",
-    "...."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4aba4071",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%sql\n"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.9"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
-}
->>>>>>> upstream/main
